modules/gdscript/tests/scripts/analyzer/errors/access_level_readonly_var_outside.gd
@private

class Foo:
    readonly var a = 1

func test():
    Foo.new().a = 10
